fix: resolve CORS compilation error, fix test suites, and make mvnw executable